--- a/src/sentry/templates/sentry/emails/email-styles.html
+++ b/src/sentry/templates/sentry/emails/email-styles.html
@@ -51,6 +51,10 @@
     color: #838c99;
   }
 
+  .align-right {
+    text-align: right;
+  }
+
   pre, blockquote, table {
     margin-bottom: 20px;
   }
@@ -108,6 +112,10 @@
     border-bottom: 1px solid #dee7eb;
   }
 
+  .header table {
+    margin-bottom: 0;
+  }
+
   .header .btn {
     float: right;
     margin: -3px 0 0 0;
@@ -157,6 +165,18 @@
     font-size: 22px;
     font-weight: 700;
     margin: 0 0 20px;
+  }
+
+  h4 {
+    font-size: 18px;
+    font-weight: 700;
+    margin: 20px 0;
+  }
+
+  h5 {
+    font-size: 16px;
+    font-weight: 700;
+    margin: 0 0 4px;
   }
 
   .inner {
@@ -521,6 +541,121 @@
     font-weight: 500;
     text-align: left;
     font-size: 14px;
+  }
+
+  .weekly-report .container {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  .weekly-report .header td {
+    text-align: right;
+    font-size: 14px;
+  }
+
+  .weekly-report td, .weekly-report th {
+    text-align: left;
+  }
+
+  .weekly-report .issue-table {
+    margin-bottom: 40px;
+  }
+
+  .weekly-report .issue-table th {
+    border-bottom: 1px solid #EAEDF1;
+  }
+
+  .weekly-report .issue-table th h4 {
+    margin: 0 0 15px;
+  }
+
+  .weekly-report .issue-table td {
+    border-bottom: 1px solid #EAEDF1;
+    padding: 12px 0;
+  }
+
+  .weekly-report .issue-table td.empty {
+    text-align: center;
+    background: #FBFCFD;
+    border: 1px solid #EAEDF1;
+    font-size: 14px;
+  }
+
+  .weekly-report .issue-table .issue-meta {
+    font-size: 13px;
+  }
+
+  .weekly-report .issue-table .issue-meta .issue-project {
+    color: #94A0B3;
+    padding-right: 8px;
+  }
+
+  .weekly-report .issue-table .status-column {
+    width: 90px;
+    text-align: center;
+    padding-left: 20px;
+  }
+
+  .weekly-report .issue-table th.status-column {
+    text-transform: uppercase;
+    font-size: 14px;
+    color: #8794A8;
+    padding-bottom: 15px;
+  }
+
+  .weekly-report .legend {
+    font-size: 14px;
+    text-align: right;
+  }
+
+  .weekly-report .legend span {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    padding: 3px;
+    vertical-align: text-bottom;;
+    margin: 0 3px 0 10px;
+    border-radius: 3px;
+  }
+
+  .weekly-report .all {
+    background: #D6DBE4;
+  }
+
+  .weekly-report .resolved {
+    background: #A290D1;
+  }
+  .weekly-report .issues-resolved {
+    margin-bottom: 30px;
+  }
+
+  .weekly-report .issues-resolved .issues-resolved-column {
+    width: 33.3%;
+    text-align: right;
+  }
+
+  .weekly-report .issues-resolved .issues-resolved-column-left {
+    padding-right: 15px;
+  }
+
+  .weekly-report .issues-resolved .issues-resolved-column-middle {
+    padding-left: 20px;
+    padding-right: 20px;
+    border-left: 1px solid #D6DBE4;
+    border-right: 1px solid #D6DBE4;
+  }
+
+  .weekly-report .issues-resolved .issues-resolved-column .stat {
+    font-size: 30px;
+    margin-bottom: 5px;
+  }
+
+  .weekly-report .issue-graph, .weekly-report .issue-graph-bar {
+    margin-bottom: 0;
+  }
+
+  .weekly-report .issue-graph-bar td {
+    font-size: 0;
   }
 
   @media only screen and (max-device-width: 480px) {
