Move user and event counts to their own oolumns

--- a/src/sentry/templates/sentry/emails/email-styles.html
+++ b/src/sentry/templates/sentry/emails/email-styles.html
@@ -590,13 +590,14 @@
     padding-right: 8px;
   }
 
-  .weekly-report .issue-table .status-column {
-    width: 90px;
+  .weekly-report .issue-table .narrow-column {
+    width: 60px;
     text-align: center;
     padding-left: 20px;
+    color: #687276;
   }
 
-  .weekly-report .issue-table th.status-column {
+  .weekly-report .issue-table th.narrow-column {
     text-transform: uppercase;
     font-size: 14px;
     color: #8794A8;
