--- a/src/sentry/templates/sentry/emails/email-styles.html
+++ b/src/sentry/templates/sentry/emails/email-styles.html
@@ -16,7 +16,7 @@
   .main {
     max-width: 700px;
     box-shadow: 0 1px 3px rgba(0,0,0, .1);
-    margin: 10px auto;
+    margin: 15px auto;
     border-radius: 4px;
     border: 1px solid #c7d0d4;
     border-collapse: separate;
@@ -135,6 +135,17 @@
     color: #ccc;
     font-weight: normal;
   }
+
+  .unsubscribe-box {
+    background: #FDFDFE;
+    border: 1px solid #D6DBE4;
+    border-radius: 3px;
+    padding: 15px;
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 15px;
+  }
+
   .footer {
     border-top: 1px solid #E7EBEE;
     padding: 35px 0;
@@ -657,6 +668,25 @@
 
   .weekly-report .issue-graph-bar td {
     font-size: 0;
+  }
+
+  .weekly-report .user-impact {}
+
+  .weekly-report .user-impact-stat {
+    width: 90px;
+    height: 90px;
+    vertical-align: middle;
+    text-align: center;
+    font-size: 32px;
+    color: #836CC2;
+    background-size: 90px 90px;
+    background-image: url("{% absolute_asset_url 'sentry' 'images/email/circle-bg.png' %}");
+  }
+
+  .weekly-report .user-impact-text {
+    font-size: 18px;
+    padding-left: 12px;
+    padding-right: 15px;
   }
 
   @media only screen and (max-device-width: 480px) {
