Add increase/decrease arrows

--- a/src/sentry/templates/sentry/emails/email-styles.html
+++ b/src/sentry/templates/sentry/emails/email-styles.html
@@ -613,6 +613,7 @@
     font-size: 14px;
     color: #8794A8;
     padding-bottom: 15px;
+    font-weight: 500;
   }
 
   .weekly-report .legend {
@@ -660,6 +661,10 @@
   .weekly-report .issues-resolved .issues-resolved-column .stat {
     font-size: 30px;
     margin-bottom: 5px;
+  }
+
+  .weekly-report .issues-resolved .issues-resolved-column .stat img {
+    vertical-align: middle;
   }
 
   .weekly-report .issue-graph, .weekly-report .issue-graph-bar {
