Deemphasize resolved issues

--- a/src/sentry/templates/sentry/emails/email-styles.html
+++ b/src/sentry/templates/sentry/emails/email-styles.html
@@ -616,6 +616,10 @@
     font-weight: 500;
   }
 
+  .weekly-report .issue-table .is-resolved h5 a {
+    color: #98A4B6;
+  }
+
   .weekly-report .legend {
     font-size: 14px;
     text-align: right;
